@@ -1700,7 +1700,8 @@ of the composite option. Not all options of a driver/printer combo
 need to be member options of the composite option. It is not allowed
 to have one option being member of more than one composite option. The
 composite option must be an enumerated choice options, the member
-options must be enumerated choice or boolean.
+options must be enumerated choice or boolean options. Member options
+can even be composite options, so composite options can be nested.
 
 It is enough to add a composite option as shown. The PPD generator
 (getppd() in lib/Foomatic/DB.pm, package "foomatic-db-engine") will
